# gpt1_ablation_factory

./: README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: ablations.yaml  finetune_glue.yaml  pretrain_books.yaml
configs/data/: books_corpus_open.yaml  glue_mnli.yaml  glue_sst2.yaml  race.yaml  story_cloze.yaml
configs/model/: gpt_small.yaml  lstm_baseline.yaml
gpt1_factory/: __init__.py  configs.py  registry.py
gpt1_factory/cli/: download.py  finetune.py  pretrain.py  run_ablation.py
gpt1_factory/data/: __init__.py  collators.py  datasets.py  downloader.py  text_bpe.py
gpt1_factory/models/: __init__.py  checkpoint.py  gpt_decoder.py  heads.py  lstm_baseline.py
gpt1_factory/tasks/: __init__.py  formatting.py  glue_taskmap.py  metrics.py
gpt1_factory/trainers/: __init__.py  finetune_trainer.py  pretrain_trainer.py  zero_shot.py
gpt1_factory/utils/: distributed.py  logging.py  schedules.py  seed.py  tensorboard.py
scripts/: download.sh  finetune.sh  pretrain.sh  run_ablation.sh
tests/: test_collators.py  test_models.py  test_tokenizer.py
