[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt1-ablation-factory"
version = "0.1.0"
description = "Factory-mode GPT1 pretrain/finetune/ablation project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Team"}]
dependencies = []

[tool.setuptools.package-data]
"gpt1_factory" = ["**/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310"]